src/objects/QQNAIEvent__c.object
<CustomObject>
    <description>Room assignment state change events</description>
    <fields>
        <fullName>EventId__c</fullName>
        <label>EventId</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsEntry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsEntry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RoomState__c</fullName>
        <label>評価リスト</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RoomsAssigned__c</fullName>
        <label>RoomsAssigned</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateBefore__c</fullName>
        <label>StateBefore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ps_LeadIndexRef__c</fullName>
        <label>ps_LeadIndexRef</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>QQNAIEvent</label>
    <nameField>
        <displayFormat>AIE-{00000000}</displayFormat>
        <label>AIEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>